--- a/javascript-basics-01/Step_7.html
+++ b/javascript-basics-01/Step_7.html
@@ -11,4 +11,5 @@
             <button id="validate" name="validate">validate</button>
         </form>
     </body>
+    <script src="step_7.js"></script>
 </html>
